Use qhullcpp to build surfaces' convex hulls
- bind to static qhullcpp/qhull_r
- no more system() calls
- about 40x speedup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,6 +89,10 @@ set_target_properties(mc_rbdyn PROPERTIES COMPILE_FLAGS "-DMC_RBDYN_EXPORTS")
 pkg_config_use_dependency(mc_rbdyn mc_rbdyn_urdf)
 pkg_config_use_dependency(mc_rbdyn Tasks)
 target_link_libraries(mc_rbdyn ${Boost_LIBRARIES} ${GEOS_LIBRARY} mc_rtc_loader mc_rtc_utils)
+# qhull
+target_include_directories(mc_rbdyn SYSTEM PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../3rd-party/qhull")
+target_link_libraries(mc_rbdyn qhullcpp)
+target_link_libraries(mc_rbdyn qhullstatic_r)
 if(NOT WIN32)
   pkg_config_append_libs(${Boost_LIBRARIES})
 endif()
