--- a/3rd-party/qhull/CMakeLists.txt
+++ b/3rd-party/qhull/CMakeLists.txt
@@ -329,7 +329,7 @@ set(
         index.htm
 )
 
-include_directories(${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 if(CMAKE_BUILD_TYPE MATCHES "[dD]ebug")
     set(qhull_CPP qhullcpp_d)
