--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,14 @@ else()
   endif()
 endif()
 
+set(NANOMSG_NAME nanomsg)
+add_optional_dependency(${NANOMSG_NAME})
+if(NOT ${NANOMSG_NAME}_FOUND)
+  MESSAGE("Failed to find ${NANOMSG_NAME}, trying to find libnanomsg")
+  set(NANOMSG_NAME libnanomsg)
+  add_required_dependency(${NANOMSG_NAME})
+endif()
+
 macro(find_description_package desc_pkg)
   string(TOUPPER "${desc_pkg}" "DESC_PKG")
   if(NOT DEFINED ${DESC_PKG}_PATH)
