--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -49,9 +49,58 @@
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
   "LogTemplate" : "mc-control",
 
+  // GUIServer section
+  "GUIServer" :
+  {
+
+    // If true, enable the GUI server, otherwise or if absent, disable this
+    // feature
+    "Enable" : true,
+
+    // Publication timestep, actual rate is rounded up depending on the
+    // controller timestep
+    "Timestep": 1.0,
+
+    // IPC (inter-process communication) section, if the section is absent
+    // this disables the protocol, if the section is empty it is configured
+    // to its default settings.
+    "IPC" :
+    {
+
+      // If the GUI server IPC protocol is enabled, this is used as a base
+      // to create the sockets, the actual sockets name will be formed by
+      // adding _sub.ipc and _rep.ipc to the provided path. The file will
+      // be created if required
+      "GUIServerTCPHost" : "/tmp/mc_rtc",
+    },
+
+    // TCP section, the same remarks apply as IPC
+    "TCP" :
+    {
+      // Binding host, * binds to all interfaces
+      "Host": "*",
+
+      // Binding ports, the first is used for PUB socket and the second for
+      // the REP socket
+      "Ports": [4242, 4343]
+    },
+
+    // WS (websocket) section, the same remarks apply as IPC
+    //"WS" :
+    //{
+    //  // Binding host, * binds to all interfaces
+    //  "Host": "*",
+
+    //  // Binding ports, the first is used for PUB socket and the second for
+    //  // the REP socket
+    //  "Ports": [8080, 8081]
+    //}
+  },
+
+
   // The following option change the verbosity of the controller and robot
   // loader
-  "VerboseLoader" : true
+  "VerboseLoader" : true,
 
   // The following option is used to disable controller/robot creation sandboxing
   // This option only affects Linux
