--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -81,7 +81,7 @@
       "Host": "*",
 
       // Binding ports, the first is used for PUB socket and the second for
-      // the REP socket
+      // the PULL socket
       "Ports": [4242, 4343]
     },
 
@@ -92,7 +92,7 @@
     //  "Host": "*",
 
     //  // Binding ports, the first is used for PUB socket and the second for
-    //  // the REP socket
+    //  // the PULL socket
     //  "Ports": [8080, 8081]
     //}
   },
