--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,7 @@ package_trusty_amd64_noros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty amd64
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe trusty amd64
   artifacts:
@@ -112,6 +113,7 @@ package_trusty_amd64_ros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty amd64
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe trusty amd64
   artifacts:
@@ -130,6 +132,7 @@ package_trusty_i386_noros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty i386
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe trusty i386
   artifacts:
@@ -147,6 +150,7 @@ package_trusty_i386_ros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty i386
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe trusty i386
   artifacts:
@@ -165,6 +169,7 @@ package_xenial_amd64_noros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial amd64
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe xenial amd64
   artifacts:
@@ -183,6 +188,7 @@ package_xenial_amd64_ros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial amd64
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe xenial amd64
   artifacts:
@@ -201,6 +207,7 @@ package_xenial_i386_noros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial i386
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe xenial i386
   artifacts:
@@ -219,6 +226,7 @@ package_xenial_i386_ros:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial i386
     - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
+    - mkdir -p 3rd-party/ext && git clone https://github.com/nanomsg/nanomsg 3rd-party/ext/nanomsg
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe xenial i386
   artifacts:
