--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -21,3 +21,4 @@ endmacro()
 add_fsm_state_simple(Pause)
 add_fsm_state_simple(MetaTasks)
 add_fsm_state_simple(AddRemoveContact)
+add_fsm_state_simple(SlidingFootContact)
