Put the FSM controller in a specific lib
This makes it much easier to derive from the FSM controller

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,7 +68,7 @@ mc_rtc_test(testSimulationContactPair mc_control)
 
 add_subdirectory(fsm_states)
 
-mc_rtc_test(testFSMStateFactory fsm ConfigureState)
+mc_rtc_test(testFSMStateFactory mc_control_fsm ConfigureState)
 
 ######################################
 # -- Controllers and robots tests -- #
