--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -3,7 +3,7 @@ set(FSM_STATES_INSTALL_PREFIX "${MC_CONTROLLER_INSTALL_PREFIX}/fsm/states")
 macro(add_fsm_state state_name state_SRC state_HDR)
   add_library(${state_name} SHARED  ${state_SRC} ${state_HDR})
   set_target_properties(${state_name} PROPERTIES PREFIX "")
-  target_link_libraries(${state_name} fsm)
+  target_link_libraries(${state_name} mc_control_fsm)
   install(TARGETS ${state_name}
     DESTINATION ${FSM_STATES_INSTALL_PREFIX})
   install(FILES ${state_HDR}
