--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -100,7 +100,7 @@
 
   // The following option change the verbosity of the controller and robot
   // loader
-  "VerboseLoader" : true,
+  "VerboseLoader" : false,
 
   // The following option is used to disable controller/robot creation sandboxing
   // This option only affects Linux
