--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ option(DISABLE_ROBOT_TESTS "Disable RobotModule unit tests" OFF)
 
 option(BUILD_BENCHMARKS "Build benchmarks" OFF)
 
+option(DISABLE_ROS "Do not build with ros support (even if ros was found)" OFF)
+
 SEARCH_FOR_EIGEN()
 
 if(WIN32)
@@ -120,16 +122,20 @@ endmacro()
 find_description_package(mc_env_description)
 find_description_package(hrp2_drc_description)
 find_description_package(hrp4_description)
-
-add_optional_dependency(roscpp)
-if(${ROSCPP_FOUND})
-  set(DEFINE_HAS_ROS_MACRO "#define MC_RTC_HAS_ROS 1")
-  add_required_dependency(nav_msgs)
-  add_required_dependency(sensor_msgs)
-  add_required_dependency(tf2_ros)
-  add_required_dependency(rosbag)
-  add_required_dependency(mc_rtc_msgs)
+if(NOT ${DISABLE_ROS})
+  add_optional_dependency(roscpp)
+  if(${ROSCPP_FOUND})
+    set(DEFINE_HAS_ROS_MACRO "#define MC_RTC_HAS_ROS 1")
+    add_required_dependency(nav_msgs)
+    add_required_dependency(sensor_msgs)
+    add_required_dependency(tf2_ros)
+    add_required_dependency(rosbag)
+    add_required_dependency(mc_rtc_msgs)
+  else()
+    set(DEFINE_HAS_ROS_MACRO "")
+  endif()
 else()
+  message(STATUS "Ros support is disabled (even if ros is available)")
   set(DEFINE_HAS_ROS_MACRO "")
 endif()
 
