Implement mc_control::fsm::Executor
This class takes care of executing a transition map

Additional changes:
- Use end-effector task on free-flyer instead of CoM task
- Introduce IdleKeepState option, if false, keep the current behaviour,
  if true, the current state keeps running until the transition

--- a/src/mc_control/fsm/CMakeLists.txt
+++ b/src/mc_control/fsm/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(fsm_controller_SRC
   Controller.cpp
+  Executor.cpp
   StateFactory.cpp
   TransitionMap.cpp
 )
@@ -7,6 +8,7 @@ set(fsm_controller_SRC
 set(fsm_controller_HDR_DIR ${PROJECT_SOURCE_DIR}/include/mc_control/fsm)
 set(fsm_controller_HDR
   ${fsm_controller_HDR_DIR}/Controller.h
+  ${fsm_controller_HDR_DIR}/Executor.h
   ${fsm_controller_HDR_DIR}/State.h
   ${fsm_controller_HDR_DIR}/StateFactory.h
   ${fsm_controller_HDR_DIR}/Transition.h
