--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -22,3 +22,4 @@ add_fsm_state_simple(Pause)
 add_fsm_state_simple(MetaTasks)
 add_fsm_state_simple(AddRemoveContact)
 add_fsm_state_simple(SlidingFootContact)
+add_fsm_state_simple(Meta)
