--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -23,3 +23,4 @@ add_fsm_state_simple(MetaTasks)
 add_fsm_state_simple(AddRemoveContact)
 add_fsm_state_simple(SlidingFootContact)
 add_fsm_state_simple(Meta)
+add_fsm_state_simple(Parallel)
