--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.swp
 *.pyc
-binding/python/*/*.cpp
-binding/python/*/*.so
-binding/python/*/__init__.py
-binding/python/*/*.h
+binding/python/**/*.cpp
+binding/python/**/*.so
+binding/python/**/__init__.py
+binding/python/**/*.h
 binding/python/setup.py
 binding/python/mc_rtc/mc_rtc_config.pxi
 *~
