--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -80,6 +80,6 @@ if(NOT DEFINED PYTHON_DEB_ROOT AND ${PYTHON_BINDING})
   set(USE_SANDBOX "false")
   set(TEST_CONTROLLER_NAME "PythonController#test_python.TestPythonController")
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/TestPythonController/mc_rtc-TestPythonController.conf)
-  add_test(NAME "TestPythonController" COMMAND test_controller_ticker --run_test=RUN TestPythonController/mc_rtc-TestPythonController.conf 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python")
+  add_test(NAME "TestPythonController" COMMAND test_controller_ticker --run_test=RUN ${CMAKE_CURRENT_BINARY_DIR}/TestPythonController/mc_rtc-TestPythonController.conf 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python")
   add_test(TestPythonControllerLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
 endif()
