--- a/src/mc_control/python/CMakeLists.txt
+++ b/src/mc_control/python/CMakeLists.txt
@@ -2,10 +2,10 @@ include(../../../cmake/python.cmake)
 
 include_directories(../../../binding/python)
 
-FINDPYTHON()
-include_directories(${PYTHON_INCLUDE_DIRS})
+findpython()
 
 add_controller("python" "python_controller.cpp" "python_controller.h")
+target_include_directories(python PRIVATE ${PYTHON_INCLUDE_DIRS})
 target_link_libraries(python ${PYTHON_LIBRARIES})
 
 add_dependencies(python mc_rtc-python-bindings)
