[Python] Add mc_control_fsm path to setup.py

--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -26,6 +26,7 @@ GET_MC_RTC_PROPERTY(INCLUDE_DIRECTORIES)
 GET_MC_RTC_PROPERTY(LINK_FLAGS)
 GET_MC_RTC_PROPERTY(LINK_LIBRARIES)
 GET_MC_RTC_PROPERTY(LOCATION)
+get_target_property(MC_CONTROL_FSM_LOCATION mc_control_fsm LOCATION)
 configure_file(setup.in.py ${CMAKE_CURRENT_SOURCE_DIR}/setup.py)
 
 if(${ROSCPP_FOUND})
