--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -2,12 +2,15 @@ add_executable(mc_bin_to_log mc_bin_to_log.cpp)
 target_link_libraries(mc_bin_to_log mc_control)
 pkg_config_use_dependency(mc_bin_to_log Tasks)
 
+add_executable(mc_bin_to_flat mc_bin_to_flat.cpp)
+target_link_libraries(mc_bin_to_flat mc_control)
+
 set(UTILS_SCRIPT
   mc_rtc_new_controller
   mc_rtc_new_fsm_controller
 )
 
-install(TARGETS mc_bin_to_log DESTINATION bin)
+install(TARGETS mc_bin_to_log mc_bin_to_flat DESTINATION bin)
 install(PROGRAMS ${UTILS_SCRIPT} DESTINATION bin)
 
 if(${ROSCPP_FOUND})
