Fix a typo in sample mc_rtc.conf

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -109,10 +109,10 @@
   // The following options are used to control the location of the
   // controllers' and robots' modules (libraries)
   // The paths added by this option are added to the default path
-  //"ControllerModulePath" : "/a/single/path/to/controller/directory/"
-  //"ControllerModulePath" : ["/one/path/to/controller/", "/another/path/"]
+  //"ControllerModulePaths" : "/a/single/path/to/controller/directory/"
+  //"ControllerModulePaths" : ["/one/path/to/controller/", "/another/path/"]
   //"RobotModulePath" : "/a/single/path/to/robot/directory/"
-  //"RobotModulePath" : ["/one/path/to/robot/", "/another/path/"]
+  //"RobotModulePaths" : ["/one/path/to/robot/", "/another/path/"]
 
   // The following options are used to clear the default loading path
   // for controllers and robots respectively
