Update according to @gergondet's comments

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -19,6 +19,11 @@
   // otherwise, the controller state is used
   // "UpdateRealFromSensors" : false,
 
+  // If "UpdateRealFromSensors" is set to true, you can choose which BodySensor to use
+  // for updating the floating base attitude. If not set, the default sensor for the robot will be
+  // used.
+  // "UpdateRealSensorName": "FloatingBase",
+
   // Publish the state of the controlled robot (ROS)
   "PublishControlState" : true,
 
