--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,10 +26,12 @@ if("${CMAKE_CXX_FLAGS}" MATCHES "--coverage")
   string(REPLACE "--coverage" "" CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS}")
 endif()
 
-add_definitions(-std=c++0x)
-add_definitions(-mfpmath=sse -msse2)
 if(WIN32)
-add_definitions("-DNOMINMAX" "-D_ENABLE_EXTENDED_ALIGNED_STORAGE")
+  add_definitions("-DNOMINMAX" "-D_ENABLE_EXTENDED_ALIGNED_STORAGE")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4068")
+else()
+  add_definitions(-std=c++0x)
+  add_definitions(-mfpmath=sse -msse2)
 endif()
 
 option(PYTHON_BINDING "Generate python binding." ON)
